--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Skillstorm</title>
+  <link rel="icon" type="image/png" href="https://iili.io/FWhmuCQ.md.png" /> <!-- AQUI -->
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
