--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Skillstorm</title>
   <link rel="icon" href="https://iili.io/FWhmuCQ.md.png" type="image/png" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="https://iili.io/FWhmuCQ.md.png" type="image/png" />
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+
 </head>
 <body>
   <div id="start-screen">
