--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Skillstorm</title>
   <link rel="icon" href="https://iili.io/FWhmuCQ.md.png" type="image/png" />
-  <link rel="icon" href="https://iili.io/FWhmuCQ.md.png" type="image/png" />
+  <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-
 </head>
 <body>
+  <!-- Tela inicial -->
   <div id="start-screen">
     <img id="logo" src="https://iili.io/FWhmuCQ.md.png" alt="Logo Skillstorm">
     <button id="play-button">PLAY</button>
   </div>
 
+  <!-- Jogo -->
   <canvas id="game"></canvas>
   <div id="upgrade-screen"></div>
 
