--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
+  <div id="cheat-panel">
+  <button id="cheat-button">⚙️ Cheats</button>
+  <div id="cheat-menu">
+    <button onclick="nextWave()">⏭️ Skip Wave</button>
+    <!-- Outros cheats opcionais -->
+    <button onclick="player.health = 999">❤️ Max HP</button>
+    <button onclick="player.damage += 50">💥 +50 Damage</button>
+  </div>
+</div>
+
 <body>
   <!-- Tela inicial -->
   <div id="start-screen">
